Select Mirror fails assert with zero-length edges when in edge-selection mode #89342

Closed
opened 2021-06-22 00:25:06 +02:00 by Fen · 5 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-21 16:25, hash: b11a463e4f
Worked: Unsure; 2.93 exhibits the same behavior

Short description of error
If there are two edges, one edge is of zero length, that edge is positioned on the X axis, and that edge is selected (in edge-select mode), running the Select Mirror operator causes an assert failure.

Exact steps for others to reproduce the error

  1. Load the attached file
  2. Go into Edit mode, with edge selection
  3. Select the visible edge
  4. Invert the selection, so that the zero-length edge is selected
  5. Run the Select Mirror operation (over the X-axis, if that's not the default for you)
  6. Assert fails

mirror-assert.blend

The release build does not crash.

The zero-length edge must be positioned on the axis that we're mirroring over. So, in the example below, mirroring over X or Z causes a crash, but Y does not:

image.png

(the zero-length edge is the single dot in the top right corner)

In a release build, the zero-length edge remains selected after running the operator. If the edge is in the wrong position, it will get deselected in both the release build and the debug build.

Another edge must be present. A single zero-length edge doesn't experience this bug. The other edge's exact position doesn't seem to matter, but it has to be there.

The presence of other edges can also prevent the assert failure, so it's very specific!

This can also happen if both edges are zero-length. The mesh data validates without any problems.

Nothing happens if you are in vertex-selection mode.

Relevant assert:

BLI_assert failed: D:\blender-git\blender\source\blender\bmesh\intern\bmesh_query.c:2002, BM_edge_exists(), at 'v_a != v_b'

Stacktrace: P2194

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-06-21 16:25, hash: `b11a463e4f` Worked: Unsure; 2.93 exhibits the same behavior **Short description of error** If there are two edges, one edge is of zero length, that edge is positioned on the X axis, and that edge is selected (in edge-select mode), running the *Select Mirror* operator causes an assert failure. **Exact steps for others to reproduce the error** 1. Load the attached file 2. Go into Edit mode, with edge selection 3. Select the visible edge 4. Invert the selection, so that the zero-length edge is selected 5. Run the *Select Mirror* operation (over the X-axis, if that's not the default for you) 6. Assert fails [mirror-assert.blend](https://archive.blender.org/developer/F10187164/mirror-assert.blend) The release build does not crash. The zero-length edge must be positioned on the axis that we're mirroring over. So, in the example below, mirroring over X or Z causes a crash, but Y does not: ![image.png](https://archive.blender.org/developer/F10187162/image.png) (the zero-length edge is the single dot in the top right corner) In a release build, the zero-length edge remains selected after running the operator. If the edge is in the wrong position, it will get deselected in both the release build and the debug build. Another edge must be present. A single zero-length edge doesn't experience this bug. The other edge's exact position doesn't seem to matter, but it has to be there. The presence of other edges can also *prevent* the assert failure, so it's very specific! This can also happen if both edges are zero-length. The mesh data validates without any problems. Nothing happens if you are in vertex-selection mode. Relevant assert: ``` BLI_assert failed: D:\blender-git\blender\source\blender\bmesh\intern\bmesh_query.c:2002, BM_edge_exists(), at 'v_a != v_b' ``` Stacktrace: [P2194](https://archive.blender.org/developer/P2194.txt)
Author

Added subscriber: @chemicalcrux

Added subscriber: @chemicalcrux
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

This issue was referenced by e291432f5f

This issue was referenced by e291432f5f89e67f03e89ca59efea9004d7a8eca

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-06-23 12:13:11 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89342
No description provided.