Fix T89342: Select mirror with a zero length central edge asserts